--- a/templates/principal.html
+++ b/templates/principal.html
@@ -28,7 +28,7 @@
 
             <div style="margin-top: 20px;">
                 <a href="/vista_login_facial" class="btn-grande" style="background-color: #007bff; color: white; text-decoration: none; border: 2px solid #007bff; display: inline-block;">
-                    👁️ ACCEDER CON EL ROSTRO
+                         ACCEDER CON EL ROSTRO
                 </a>
             </div>
 
